Fix: Enabled profile image display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -886,6 +886,8 @@ h3.my-profession {
     }
     .home .home-img {
         display: block;
+        text-align: center;
+        margin-top: 20px;
     } 
     .about .about-content {
         display: flex;
